@@ -25,6 +25,12 @@
     </text>
   </lang>
   <autodetect>
+    <usb>
+      <manufacturer>EPSON</manufacturer>
+      <model>Stylus CX5400</model>
+      <description>EPSON Stylus CX5400</description>
+      <commandset>ESCPL2,BDC,D4</commandset>
+    </usb>
   </autodetect>
   <functionality>B</functionality>
   <driver>gimp-print</driver>
