@@ -1,3 +1,8 @@
+2005-05-03  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/Epson-Stylus_CX5400.xml: Added IEEE 1284 information (RH
+	  bug #156661).
+
 2005-04-20  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* opt/6.xml: Fixed constraint for Minolta PagePro 8L, it broke
